@@ -1,3 +1,3 @@
 /* { dg-do compile } */
 
-var a = 20 ** "foo"; /* { dg-error "expected an integer" } */
+var a = 20 ** "foo"; /* { dg-error "invalid operand.*\n.*expected integral" } */
