@@ -1,3 +1,3 @@
 /* { dg-do compile } */
 
-var a = "foo" ** 2; /* { dg-error "expected integral or offset" } */
+var a = "foo" ** 2; /* { dg-error "invalid operand.*\n.*expected integral or offset" } */
