@@ -1,3 +1,3 @@
 /* { dg-do compile } */
 
-var a = [1,2,3] .>> 2; /* { dg-error "expected integral or offset" } */
+var a = [1,2,3] .>> 2; /* { dg-error "invalid operand.*\n.*expected integral or offset" } */
